import image and inject it

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <section id="content">
       <h1 id="main-title">Webpack from 0 to 100</h1>
       <article>
+        <img id="cartoon" alt="cartoon image" />
         <p>Hello this is my first simple webapp using webpack from scratch woohoo 😃</p>
       </article>
     </section>
@@ -28,6 +29,7 @@
   <script>
     var webclipper = new window.clipperCore.default();
     webclipper.serialize();
+    webclipper.injectImage();
   </script>
 </body>
 </html>
