--- a/public/index.html
+++ b/public/index.html
@@ -7,29 +7,6 @@
   <title>Webpack from 0 to 100</title>
 </head>
 <body>
-  <main>
-    <nav id="main-menu">
-      <ul>
-        <li>
-          <span>My Page</span>
-        </li>
-        <li>
-          <span>About me</span>
-        </li>
-      </ul>
-    </nav>
-    <section id="content">
-      <h1 id="main-title">Webpack from 0 to 100</h1>
-      <article>
-        <img id="cartoon" alt="cartoon image" />
-        <p>Hello this is my first simple webapp using webpack from scratch woohoo 😃</p>
-      </article>
-    </section>
-  </main>
-  <script>
-    var webclipper = new window.clipperCore.default();
-    webclipper.serialize();
-    webclipper.injectImage();
-  </script>
+  <main id="root"></main>
 </body>
 </html>
